syntax = "proto3";
package rpcpb;

import "github.com/coreos/matchbox/matchbox/server/serverpb/messages.proto";

service Groups {
  // Create a Group.
  rpc GroupPut(serverpb.GroupPutRequest) returns (serverpb.GroupPutResponse) {};
  // Get a machine Group by id.
  rpc GroupGet(serverpb.GroupGetRequest) returns (serverpb.GroupGetResponse) {};
  // List all machine Groups.
  rpc GroupList(serverpb.GroupListRequest) returns (serverpb.GroupListResponse) {};
}

service Profiles {
  // Create a Profile.
  rpc ProfilePut(serverpb.ProfilePutRequest) returns (serverpb.ProfilePutResponse) {};
  // Get a Profile by id.
  rpc ProfileGet(serverpb.ProfileGetRequest) returns (serverpb.ProfileGetResponse) {};
  // List all Profiles.
  rpc ProfileList(serverpb.ProfileListRequest) returns (serverpb.ProfileListResponse) {};
}

service Ignition {
  // Create or update an Ignition template.
  rpc IgnitionPut(serverpb.IgnitionPutRequest) returns (serverpb.IgnitionPutResponse) {};
}

service Select {
  // SelectGroup returns the Group matching the given labels.
  rpc SelectGroup(serverpb.SelectGroupRequest) returns (serverpb.SelectGroupResponse) {};
  // SelectProfile returns the Profile matching the given labels.
  rpc SelectProfile(serverpb.SelectProfileRequest) returns (serverpb.SelectProfileResponse) {};
}
