syntax = "proto3";
package serverpb;

import "github.com/coreos/matchbox/matchbox/storage/storagepb/storage.proto";

// Selects

message SelectGroupRequest {
  map<string, string> labels = 1;
}
message SelectGroupResponse {
  storagepb.Group group = 1;
}

message SelectProfileRequest {
  map<string, string> labels = 1;
}
message SelectProfileResponse {
  storagepb.Profile profile = 1;
}

// Groups

message GroupPutRequest {
  storagepb.Group group = 1;
}
message GroupPutResponse {}

message GroupGetRequest {
  string id = 1;
}
message GroupGetResponse {
  storagepb.Group group = 1;
}

message GroupDeleteRequest {
  string id = 1;
}
message GroupDeleteResponse {
}

message GroupListRequest {}
message GroupListResponse {
  repeated storagepb.Group groups = 1;
}

// Profiles

message ProfilePutRequest {
  storagepb.Profile profile = 1;
}
message ProfilePutResponse {}

message ProfileGetRequest {
  string id = 1;
}
message ProfileGetResponse {
  storagepb.Profile profile = 1;
}

message ProfileDeleteRequest {
  string id = 1;
}
message ProfileDeleteResponse {
}

message ProfileListRequest {}
message ProfileListResponse {
  repeated storagepb.Profile profiles = 1;
}

// Ignition

message IgnitionPutRequest {
  string name = 1;
  bytes config = 2;
}
message IgnitionPutResponse {}

message IgnitionGetRequest {
  string name = 1;
}
message IgnitionGetResponse {
  bytes config = 1;
}

message IgnitionDeleteRequest {
  string name = 1;
}
message IgnitionDeleteResponse {}

// Generic

message GenericPutRequest {
  string name = 1;
  bytes config = 2;
}
message GenericPutResponse {}

message GenericGetRequest {
  string name = 1;
}
message GenericGetResponse {
  bytes config = 1;
}

message GenericDeleteRequest {
  string name = 1;
}
message GenericDeleteResponse {}
